Fix - issue with light/vision not being visible after chrome update

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -8787,7 +8787,7 @@ body:not(.body-rpgcampaign) .site-bar{
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 9;
+    z-index: 10;
     mix-blend-mode: lighten;
 }
 
